<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="326dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="45dp"
        android:clickable="true"
        android:contentDescription="@string/fbNext"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/tvNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="152dp"
        android:hint="@string/resNome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvCidadania"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCidadania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resCidadania"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAvaliacao"
        app:layout_constraintEnd_toEndOf="@+id/tvNomeUsuario"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvNomeUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeUsuario" />

    <TextView
        android:id="@+id/tvAvaliacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resAvaliacao"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvCidadania"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvCidadania"
        app:layout_constraintTop_toBottomOf="@+id/tvCidadania" />
</androidx.constraintlayout.widget.ConstraintLayout>